[package]
authors = ["Bruno Tavares <connect+github@bltavares.com>"]
name = "pickpocket"
version = "0.1.0"
edition = "2018"

[dependencies]
derive_builder = "0.9.0"
chrono = "0.4.19"
json_value_merge = "0.1"
log = "0.4"
serde = "1.0.119"
serde_json = "1.0.61"
serde_derive = "1.0.119"
serde_with = "1.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0.2", features = ["rt-multi-thread", "macros"] }
thiserror = "1.0"

[dev-dependencies]
base64 = "0.13"
env_logger = "0.8"
