[package]
authors = ["David Pérez <d@vidp.dev>"]
name = "libpocket"
version = "0.1.0"
edition = "2021"

[dependencies]
derive_builder = "0.11"
json_value_merge = "1.1"
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_with = "1.11"
thiserror = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[dev-dependencies]
base64 = "0.13"
env_logger = "0.9"
pretty_assertions = "1.3"
